# Multi-Agent-Entertainment-Intelligence-Platform

./: README.md
IDE/: README.md  claude_desktop_config.json  exe.txt  pyproject.toml  setup.sh
IDE/agents/: multi_agents.py
IDE/benchmarks/: performance_test.py
IDE/data_sources/: tmdb_integration.py
IDE/demo/: demo_script.py
IDE/deployment/: docker-compose.yml
IDE/guardrail/: guardrail.py
IDE/mcp_application/: mcp_application.py
IDE/mcp_client/: mcp_client.py
IDE/mcp_server/: mcp_server.py
IDE/test/: test_basic.py
google_colab_environment/: README.md  requirements.txt
google_colab_environment/agents/: multi_agents_fastmcp.py
google_colab_environment/guardrail/: guardrail_fastmcp.py
google_colab_environment/mcp_application/: mcp_application.py
google_colab_environment/mcp_client/: mcp_client.py
google_colab_environment/mcp_server/: mcp_server.py
google_colab_environment/notebook/: MCP_Server_for_Netflix_TV_and_Movie_Shows.ipynb
notebook/: MCP_Server_for_Netflix_TV_and_Movie_Shows.ipynb
